# ocr-gemini-pipeline

./: .gitignore  MANIFEST.md  MISSING_FEATURES.md  README.md  gemini-ocr-run.sh  pyproject.toml
docs/: CHANGELOG.md  ENVIRONMENT_UBUNTUOVH.md  MANIFEST.md  TESTING.md  run.md  snapshot_ubuntuovh.txt
docs/reference/: ENVIRONMENT_UBUNTUOVH.md
docs/snapshots/: 2025-12-29_ubuntuovh.txt
import_from_old/: .gitignore  README.md  db_writer.py  gemini_login.py  gemini_metrics.py  gemini_ocr.py
import_from_old/docs/: production_run.md
import_from_old/ops/logrotate/: gemini-ocr
import_from_old/scripts/: print_config.py
import_from_old/tests/: test_config.py  test_gemini_ocr_state.py  test_metrics.py  test_watchdog.py  test_wrapper_regression.sh
legacy/: gemini_config.py  gemini_ocr.env.example  gemini_prompts.json  requirements.txt
legacy/docs/: ocr_v1_runbook.md
legacy/scripts/: metrics_summary.py
legacy/tests/: conftest.py  test_file_discovery.py
sql/: 001_initial_schema.sql  002_add_retry_fields.sql
src/ocr_gemini/: cli.py  config.py  db.py  debug.py  files.py  metrics.py  output.py  pipeline.py  utils.py
tests/: test_cli_integration.py  test_cli_logic.py  test_cli_scanning.py  test_db_repo.py  test_debug.py  test_files.py  test_metrics.py  test_output.py  test_pipeline_debug.py  test_pipeline_error_path.py  test_pipeline_smoke.py  test_playwright_engine_concurrency.py  test_playwright_engine_unit.py  test_retry_logic.py  test_ui_actions.py  test_upload_logic.py  test_upload_polish.py  test_worker_pool.py
tests/unit/: test_utils.py
(+14 files in other folders)
