[project]
name = "ocr-gemini-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.50",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ocr-gemini = "ocr_gemini.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
